# RapidBoW

./: .gitignore  BitSet.h  CMakeLists.txt  DataBase.cpp  DataBase.h  DeviceKernelArg.h  FullTree.h  KArray.h  RapidBoW.cpp  RapidBoW.h  RapidBoWInternal.h  Vocabulary.cpp  Vocabulary.h  cuda_hint.cuh  kmeans.cpp  kmeans.cu  kmeans.cuh  kmeans.h  main.cpp  platform.h  reformatDesc.cu  vocTreeLookUp.cu  vocTreeLookUp.h
tests/: ApiTests.cpp  KmeansAssignCenterTests.cpp  ReformatTests.cpp  VocTests.cpp
